--- a/timeseries.ipynb
+++ b/timeseries.ipynb
@@ -555,15 +555,7 @@
      ]
     }
    ],
-   "source": [
-    "from dateutil.relativedelta import relativedelta\n",
-    "\n",
-    "date4 = datetime.date(2024, 7, 24)\n",
-    "m = relativedelta(months=1)\n",
-    "n = 12\n",
-    "l = [(date4 + i * m) for i in range(n)]\n",
-    "print(l)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -787,7 +779,8 @@
     "\n",
     "1. 2024.7.22を以下の２通りに表示せよ\n",
     "- 07月22日\n",
-    "- July 22\n",
+    "- July 22  \n",
+    "\n",
     "2.上記07月22日は文字列。この月日だけで再びdatetime型に変換せよ。文字列→datetime型の変換は以下の「strptime(): 文字列から日付・時間への変換」を参照\n",
     "  https://note.nkmk.me/python-datetime-usage/"
    ]
@@ -808,9 +801,7 @@
     }
    ],
    "source": [
-    "date10 = datetime.date(2024, 7, 22)\n",
-    "print(date10.strftime('%m月%d日'))\n",
-    "print(date10.strftime('%B %d'))"
+    "date10 = datetime.date(2024, 7, 22)"
    ]
   },
   {
@@ -827,12 +818,7 @@
      ]
     }
    ],
-   "source": [
-    "s_format = '%m月%d日'\n",
-    "s=date10.strftime('%m月%d日')\n",
-    "dt = datetime.datetime.strptime(s, s_format)\n",
-    "print(dt)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2346,14 +2332,7 @@
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.pyplot import figure\n",
     "import japanize_matplotlib\n",
-    "fig,ax = plt.subplots(1, figsize=(14,6))\n",
-    "\n",
-    "temp_series['東京移動最高気温'] = temp_series['東京最高気温'].rolling(360).max()\n",
-    "temp_series['熊谷移動最高気温'] = temp_series['熊谷最高気温'].rolling(360).max()\n",
-    "\n",
-    "sns.lineplot(data=temp_series,x='年月日',y='東京移動最高気温',label = '東京',ax=ax)\n",
-    "sns.lineplot(data=temp_series,x='年月日',y='熊谷移動最高気温',label = '熊谷',ax=ax)\n",
-    "plt.xticks(rotation=45,ha='right')\n"
+    "fig,ax = plt.subplots(1, figsize=(14,6))\n"
    ]
   },
   {
